# catalyst

./: .env.relayer.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cosmwasm/: .gitignore  Cargo.toml  README.md  go.mod  go.sum  questions.md
cosmwasm/contracts/catalyst-factory/: Cargo.toml
cosmwasm/contracts/catalyst-ibc-interface/: Cargo.toml
cosmwasm/contracts/catalyst-ibc-interface-poa/: Cargo.toml
cosmwasm/contracts/catalyst-interface-common/: Cargo.toml
cosmwasm/contracts/catalyst-interface-gi/: Cargo.toml
cosmwasm/contracts/catalyst-interface-ibc/: Cargo.toml
cosmwasm/contracts/catalyst-interface-poa/: Cargo.toml
cosmwasm/contracts/catalyst-router/: Cargo.toml
cosmwasm/contracts/catalyst-vault-amplified/: Cargo.toml
cosmwasm/contracts/catalyst-vault-common/: Cargo.toml
cosmwasm/contracts/catalyst-vault-volatile/: Cargo.toml
cosmwasm/contracts/mock-catalyst-ibc-interface/: Cargo.toml
cosmwasm/contracts/mock-swap-pool/: Cargo.toml
cosmwasm/contracts/swap-pool/: Cargo.toml
cosmwasm/contracts/swap-pool-amplified/: Cargo.toml
cosmwasm/contracts/swap-pool-common/: Cargo.toml
cosmwasm/contracts/swap-pool-factory/: Cargo.toml
cosmwasm/contracts/swap-pool-volatile/: Cargo.toml
cosmwasm/helpers/test-helpers/: Cargo.toml
cosmwasm/helpers/token-helpers/: Cargo.toml
cosmwasm/lib/catalyst-types/: Cargo.toml
cosmwasm/lib/fixed-point-math/: Cargo.toml
cosmwasm/lib/vault-assets/: Cargo.toml
cosmwasm/lib/vault-token/: Cargo.toml
cosmwasm/mock-contracts/mock-calldata-target/: Cargo.toml
cosmwasm/mock-contracts/mock-catalyst-ibc-interface/: Cargo.toml
cosmwasm/mock-contracts/mock-catalyst-interface/: Cargo.toml
cosmwasm/mock-contracts/mock-swap-pool/: Cargo.toml
cosmwasm/mock-contracts/mock-vault/: Cargo.toml
cosmwasm/scripts/: compile_contracts.sh  deploy_and_instantiate_test_tokens.sh  deploy_contracts.sh  instantiate_factory.sh  instantiate_interface.sh
cosmwasm/tests/: common.go  cross_chain_ibc_test.go  cross_chain_test.go  misc_test.go
cosmwasm/tests/contracts/: catalyst_factory.wasm  catalyst_ibc_interface.wasm  catalyst_ibc_interface_poa.wasm  catalyst_vault_amplified.wasm  catalyst_vault_volatile.wasm  cw20_base.wasm
evm/: .env.example  .gas-snapshot  .gitignore  LICENSE  README.md  ape-config.yaml  brownie-config.yaml  foundry.toml  hardhat.config.js  package-lock.json  package.json  permit2  pnpm-lock.yaml  pyproject.toml  remappings.txt  requirements-dev.txt  setupCatalystDevnet.sh  solmate  swapOnce.sh
evm/.github/workflows/: test.yml
evm/archive/vyper_implementation/: PolymeraseEmulator.vy  SwapPoolFactory.vy  getChainId.vy
evm/contracts/: CatalystFactory.sol  CatalystGARPInterface.sol  CatalystIBCInterface.sol  CatalystIBCPayload.sol  CatalystSwapRouter.sol  CatalystVaultAmpAdjust.sol  CatalystVaultAmplified.sol  CatalystVaultCommon.sol  CatalystVaultFactory.sol  CatalystVaultLBP.sol  CatalystVaultVolatile.sol  FixedPointMath.sol  FixedPointMathLib.sol  ICatalystV1Pool.sol  ICatalystV1Vault.sol  IOnCatalyst.sol  IntegralsAmplified.sol  IntegralsVolatile.sol  SwapPool.sol  SwapPoolAmplified.sol  SwapPoolCommon.sol  SwapPoolFactory.sol  SwapPoolVolatile.sol  VaultAmplified.sol  VaultCommon.sol  VaultVolatile.sol
evm/contracts/archive/: CrossChainInterface.sol.disabled  CrossChainSwapInterface.vy.disabled
evm/contracts/interfaces/: ICatalystV1FactoryEvents.sol  ICatalystV1PoolAckTimeout.sol  ICatalystV1PoolAdministration.sol  ICatalystV1PoolDerived.sol  ICatalystV1PoolErrors.sol  ICatalystV1PoolEvents.sol  ICatalystV1PoolImmutables.sol  ICatalystV1PoolPermissionless.sol  ICatalystV1PoolState.sol  ICatalystV1PoolStructs.sol  ICatalystV1VaultAckTimeout.sol  ICatalystV1VaultAdministration.sol  ICatalystV1VaultDerived.sol  ICatalystV1VaultErrors.sol  ICatalystV1VaultEvents.sol  ICatalystV1VaultPermissionless.sol  ICatalystV1VaultState.sol  ICatalystV1VaultSuccessFailure.sol  IOnCatalyst.sol
evm/contracts/polymerase/: Dispatcher.sol  IBCEmulator.sol  IbcDispatcher.sol  IbcReceiver.sol  PolymeraseInterface.sol
evm/contracts/registry/: CatalystDescriber.sol  CatalystDescriberRegistry.sol  CatalystMathAmp.sol  CatalystMathVol.sol
evm/contracts/router/: CatalystRouter.sol  CatalystSwapRouter.sol
evm/contracts/test/: WCANTO.sol  WCRO.sol  WEVMOS.sol  bytesToString.sol  dummyTargetContract.sol  permit2.sol  testFixedPointMath.sol  token.sol
evm/contracts/utils/: FixedPointMathX64.vy  NativeMath.vy  PolymerToken.sol  bundleCreateConnections.sol
evm/contracts/vyper_implementation/: AmplifiedSwapPool.vy  SwapPool.vy
evm/disabledTests/: disable_pool_statefully.py  disable_test_multichain_swap_a.py  disabled_amp_liquiditySwap.py  disabled_liquiditySwap.py  manual_test_multichain_swap_b.disabled
evm/disabledTests/amplified/: test_amp.py  test_amp_amp_adjustment.py  test_amp_cross_chain_swap.py  test_amp_deposit_and_withdraw.py  test_amp_local_swap.py  test_amp_setup.py  test_check_if_fee_distribution.py  (+5 more)
evm/interfaces/: IAllowanceTransfer.sol  ISignatureTransfer.sol
evm/script/: BaseMultiChainDeployer.s.sol  DeployCatalyst.s.sol  DeployContracts.s.sol  DeployInterfaces.s.sol  DeployRouter.s.sol  DeployTokens.s.sol  DeployVaults.s.sol  FundAddresses.s.sol  IWETH.sol  Registry.s.sol  Swap.s.sol  TimeLock.s.sol  WrappedGas9.disabled  WrappedGas9.sol  deployCatalyst.sh  mineSalt.sol  withdraw.s.sol
evm/scripts/: checkForTX.py  collectNetworkInformation.py  connectCatalystBSC.py  connectCatalystETH.py  deployCatalyst.py  deploy_config.json  startCatalystBSC.py  startCatalystETH.py  swapETHToBSCCatalyst.py
evm/src/: CatalystChainInterface.sol  CatalystFactory.sol  CatalystGARPInterface.sol  CatalystPayload.sol  CatalystVaultAmplified.sol  CatalystVaultCommon.sol  CatalystVaultVolatile.sol  ICatalystV1Vault.sol  IntegralsAmplified.sol  IntegralsVolatile.sol  UnderwritingInterface.sol
evm/test/: CommonTokenFunctions.t.sol  ExampleTest.t.sol  README.md  TestCommon.t.sol  TestDeployAddresses.t.sol  exampleTest.t.sol
evm/tests/: conftest.py
(+748 files in other folders)
