[workspace]
resolver = "2"

members = [
  'contracts/*',
  'lib/*'
]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = { version = "1.3.0", features = ["cosmwasm_1_1"] }
cosmwasm-storage = "1.3.0"
cw-controllers = "1.1.0"
cw-storage-plus = "1.1.0"
cw-multi-test = "0.17.0"
cw0 = "0.10.3"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha3 = "0.10.6"
thiserror = "1.0.26"
token-bindings = "0.10.3"