[workspace]
resolver = "1"

members = [
  'contracts/*',
  'lib/*'
]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["cosmwasm_1_1"] }
cw-controllers = "1.1.2"
cw-storage-plus = "1.2.0"
cw-multi-test = { version = "0.18.1", features = ["cosmwasm_1_1"] }
cw0 = "0.10.3"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = { version = "1.1.2", features = ["library"] }
generalised-incentives-common = { git = "https://github.com/catalystdao/GeneralisedIncentivesCW" }
schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
sha3 = "0.10.8"
thiserror = "1.0.50"
token-bindings = "0.11.0"