[tool.poetry]
name = "CatalystEVM"
version = "0"
description = "Catalyst EVM implementation"
authors = ["Catalyst"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
eth-brownie = "^1.19.0"
vyper = "=0.3.3"
dotmap = "^1.3.23"
sync = "^1.0.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
tqdm = "^4.62.3"
slither-analyzer = "^0.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
