[package]
name = "catalyst-vault-common"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# configure the asset type support using either of the following features
asset_native = []
asset_cw20 = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
vault-assets = { path = "../../lib/vault-assets" }
vault-token = { path = "../../lib/vault-token" }
catalyst-types = { path = "../../lib/catalyst-types" }
fixed-point-math = { path = "../../lib/fixed-point-math" }

[dev-dependencies]
cw-multi-test = { workspace = true }
