[package]
name = "catalyst-vault-volatile"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
cosmwasm-schema = "1.2.7"
cosmwasm-std = "1.2.7"
cosmwasm-storage = "1.2.7"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
catalyst-vault-common = { path = "../catalyst-vault-common" }
catalyst-types = { path = "../../lib/catalyst-types" }
fixed-point-math = { path = "../../lib/fixed-point-math" }
catalyst-ibc-interface = { path = "../catalyst-ibc-interface", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.16.4"
mock-catalyst-ibc-interface = { path = "../../mock-contracts/mock-catalyst-ibc-interface", features = ["library"] }
catalyst-factory = { path = "../catalyst-factory", features = ["library"] }
test-helpers = { path = "../../helpers/test-helpers" }
