[package]
name = "test-helpers"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.41"
catalyst-ibc-interface = { path = "../../contracts/catalyst-ibc-interface", features = ["library"] }
catalyst-factory = { path = "../../contracts/catalyst-factory", features = ["library"] }
catalyst-types = { path = "../../lib/catalyst-types" }
catalyst-vault-common = { path = "../../contracts/catalyst-vault-common" }
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cosmwasm-storage = "1.3.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
cw-multi-test = "0.16.4"
mock-catalyst-ibc-interface = { path = "../../mock-contracts/mock-catalyst-ibc-interface", features = ["library"] }
mock-calldata-target = { path = "../../mock-contracts/mock-calldata-target", features = ["library"] }
vault-assets = { path = "../../lib/vault-assets" }