[package]
name = "test-helpers"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
catalyst-ibc-interface = { path = "../../contracts/catalyst-ibc-interface", features = ["library"] }
catalyst-factory = { path = "../../contracts/catalyst-factory", features = ["library"] }
catalyst-types = { path = "../../lib/catalyst-types" }
catalyst-vault-common = { path = "../../contracts/catalyst-vault-common" }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-multi-test = { workspace = true }
mock-catalyst-ibc-interface = { path = "../../mock-contracts/mock-catalyst-ibc-interface", features = ["library"] }
mock-calldata-target = { path = "../../mock-contracts/mock-calldata-target", features = ["library"] }