[package]
name = "catalyst-types"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[dependencies]
cosmwasm-std = "1.2.5"
ethnum = { version = "=1.3.2", features = ["macros"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
forward_ref = "1"