[package]
name = "catalyst-types"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
cosmwasm-std = "1.3.0"
ethnum = { version = "=1.3.2", features = ["macros"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
forward_ref = "1"