[package]
name = "catalyst-types"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
bnum = "0.7.0"
cosmwasm-std = { workspace = true }
forward_ref = "1"
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }