[package]
name = "fixed-point-math"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
catalyst-types = { path = "../catalyst-types" }
thiserror = { workspace = true }
