[package]
name = "vault-assets"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
default = ["asset_cw20"]
asset_native = []
asset_cw20 = []

[dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cosmwasm-storage = "1.3.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }