[package]
name = "mock-swap-pool"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw20-base = { version = "1.0.1", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
fixed-point-math = { path = "../../lib/fixed-point-math" }
swap-pool-common = { path = "../../contracts/swap-pool-common" }
catalyst-ibc-interface = { path = "../../contracts/catalyst-ibc-interface", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.16.4"
mock-catalyst-ibc-interface = { path = "../mock-catalyst-ibc-interface", features = ["library"] }
catalyst-factory = { path = "../../contracts/catalyst-factory", features = ["library"] }
