[package]
name = "mock-vault"
version = "0.1.0"
authors = ["Catalyst"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
asset_native = ["catalyst-vault-common/asset_native"]
asset_cw20 = ["catalyst-vault-common/asset_cw20"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[dependencies]
cosmwasm-schema = "1.3.0"
cosmwasm-std = "1.3.0"
cosmwasm-storage = "1.3.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
fixed-point-math = { path = "../../lib/fixed-point-math" }
catalyst-vault-common = { path = "../../contracts/catalyst-vault-common" }
catalyst-ibc-interface = { path = "../../contracts/catalyst-ibc-interface", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.16.4"
mock-catalyst-ibc-interface = { path = "../mock-catalyst-ibc-interface", features = ["library"] }
catalyst-factory = { path = "../../contracts/catalyst-factory", features = ["library"] }
