[package]
name = "PolymeraseEmulator"
version = "0.1.0"
description = "PolymeraseEmulator by Catalyst"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymerase_emulator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
