[package]
name = "PolymeraseEmulatorTester"
version = "0.1.0"
description = "PolymeraseEmulatorTester by Catalyst"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymerase_emulator_tester"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
