[package]
name = "SwapPool"
version = "0.1.0"
description = "SwapPool by Catalyst"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
shared_lib = { path = "../../../rust-common/fixed_point_math_lib" }
IBCInterface = { path = "../IBCInterface", features = ["cpi", "no-entrypoint"] }
token-utils = { path = "../../token-utils" }