[package]
name = "FixedPointMath"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fixed_point_math"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
uint = "0.8"
shared_lib = { path = "../../../rust-common/fixed_point_math_lib" }